<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_burger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_order_burger" />

    <Button
        android:id="@+id/btn_sandwich"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_order_sandwich"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_beverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_order_beverage"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_side"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_order_side"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_view_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_order"
        android:layout_marginTop="16dp"/>
</LinearLayout>
